--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="styles/index.css">
     <title>Productly</title>
 </head>
-<nav>
-    <img src="images/logo.png" alt="Productly Logo">
-    <div class="wrapper">
-    <a href="">Product</a>
-    <a href="">Customers</a>
-    <a href="">Pricing</a>
-    <a href="">Resources</a>
-    <button>Sign In</button>
-    <button class="orange">Sign Up</button>
-    </div>
-</nav>
+
 <div id="content">
+    <nav>
+        <img src="images/logo.png" alt="Productly Logo">
+        <div class="wrapper">
+        <a href="">Product</a>
+        <a href="">Customers</a>
+        <a href="">Pricing</a>
+        <a href="">Resources</a>
+        <button>Sign In</button>
+        <button class="orange">Sign Up</button>
+        </div>
+    </nav>
     <div class="wrapper">
         <header>
             <div class="flex-column">
@@ -61,6 +62,7 @@
         <button class="orange">SIGN UP NOW</button>
         </div>
         <div class="container-second">
+            <div class="text-left">
             <p>Effortless Validation for</p>
             <h2>Design Professionals</h2>
             <p>The Myspace page defines the individual, 
@@ -78,20 +80,29 @@
             <h3>Custom Design designers</h3>
             <p>If you are looking for a new way to promote your business 
                 that won’t cost you more money, </p>
-
+            </div>
             <img src="images/frame2.png" alt="Frame two">
         </div>
-        <div class="contaiwner-third">
+        <div class="container-third">
             <img src="images/frame3.png" alt="Frame three">
+            <div class="text-right">
             <p>Easier decision making for</p>
             <h2>Product Managers</h2>
             <p>The Myspace page defines the individual, his or her characteristics,
             traits, personal choices and the overall personality of the person. </p>
-            <img src="images/icon5.png" alt="Done Icon"><p>Never worry about overpaying for your energy again. </p>
+            <div class="flex-icon">
+            <img src="images/icon5.png" alt="Done Icon"><p>Never worry about overpaying for your energy again.</p>
+            </div>
+            <div class="flex-icon">
             <img src="images/icon5.png" alt="Done Icon"><p>We will only switch you to energy companies that we trust and will treat you right</p>
+            </div>
+            <div class="flex-icon">
             <img src="images/icon5.png" alt="Done Icon"><p>We track the markets daily and know where the savings are.</p>
+            </div>
+            </div>    
         </div>
-        <div class="container-foruth">
+        <div class="container-fourth">
+            <div class="text-left">
             <p>Optimisation for</p>
             <h2>Marketers</h2>
             <p>Few would argue that, despite the advancements of feminism over the past 
@@ -106,26 +117,34 @@
             <h3>Custom Design designers</h3>
             <p>If you are looking for a new way to promote your business that won’t cost
                  you more money, </p>
-
+            </div>
             <img src="images/frame4.png" alt="Frame four">
         </div>
     </main>
     </div>
-</div>
+
 <footer>
-    <div class="wrapper">
+    <div class="wrapper footer">
+    <div class="logo-footer">
     <img src="images/logo.png" alt="Productly Logo">
+    </div>
+    <div class="footer-text">
     <a href="">About Us</a>
     <a href="">Blog</a>
     <a href="">Contact</a>
     <a href="">FAQ</a>
+    </div>
+    <div class="footer-text">
     <a href="">Disclaimer</a>
     <a href="">Financing</a>
     <a href="">Privacy Policy</a>
     <a href="">Terms of Service</a>
-    <button class="orange">Sign up Now</button>
+    </div>
+    <div class="footer-btn">
     <input type="text" name="Email">
+    <button class="orange small">Sign up Now</button>
+    </div>
 </div>
-
 </footer>
+</div>
 </html>
